[Refs #86208] IE - fix header top background overflow.

--- a/src/eni/seis/theme/theme-east/css/main.css
+++ b/src/eni/seis/theme/theme-east/css/main.css
@@ -3519,7 +3519,7 @@ body.template-homepage {
   padding-right: 5px;
 }
 .container-fluid.header-top {
-  overflow: overlay;
+  overflow: auto;
   background: #F8F8F8 !important;
   padding: 0.5rem;
   margin-bottom: 4rem;
