--- a/src/eni/seis/theme/theme-east/src/less/layout/header.less
+++ b/src/eni/seis/theme/theme-east/src/less/layout/header.less
@@ -7,7 +7,7 @@ body.template-homepage {
 }
 
 .container-fluid.header-top {
-  overflow: overlay;
+  overflow: auto;
   background: @color-gray-lighter !important;
   padding: 0.5rem;
   margin-bottom: 4rem;
